# icp

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  graph_generator.py  rapport.md  requirements.txt
analysis/: Makefile  cleanborder.py  graph_generator.py  requirements.txt
analysis/logs/: v1.csv  v10-fixed.csv  v11-fixed.csv  v12.csv  v13.csv  v14.csv  v16.csv  v2-fixed.csv  v4.csv  v5.csv  v6.csv  v9-1.csv  v9-2.csv
bench/: CMakeLists.txt
bench/bench/: benchmark.cc
benchmarks_logs/: v10-fixed.csv  v13-fixed.csv  v15-fixed.csv  v3-fixed.csv  v7.csv  v8-fixed-fixed.csv  v9-fixed.csv
data/cow/: cow_ref.txt  cow_tr1.txt  cow_tr2.txt  cow_tr4.txt
data/horse/: horse_ref.txt  horse_tr1.txt  horse_tr2.txt
data/line/: line_ref.txt  line_rotated_90_135_180.txt  line_scaled_2_3_4.txt  line_translated_2_3_4.txt
libcpu/: CMakeLists.txt
libcpu/libcpu/: benchmark.cc  icp.cc  icp.hh  point-3d.cc  point-3d.hh  test.cc  test.hh  test_functionnal.cc  test_point-3d_utils.cc  vp-tree.cc  vp-tree.hh
libcpu/libcpu/utils/: matrix.cc  matrix.hh  test_matrix.cc
libgpu/: CMakeLists.txt
libgpu/libgpu/: icp.cu  icp.hh  matrix.cu  matrix.hh  svd.cc  svd.hh  vp-tree.cu  vp-tree.hh
libgpu/libgpu/cuda/: memory.cu  memory.hh
main/: CMakeLists.txt
main/main/: main.cc  options.cc  options.hh
report/: .gitignore  Makefile  rapport.md  v01.md
